--- a/.github/workflows/test-transition-guide.yml
+++ b/.github/workflows/test-transition-guide.yml
@@ -24,8 +24,8 @@ jobs:
         uses: actions/checkout@v3
       - name: build documentation
         run: |
-          mkdir -p /tmp/wis2-transition/guide/images \
-          && cd transition-guide \
+          mkdir -p /tmp/wis2-transition-guide/transition-guide/images \
+          && cd wis2-transition-guide \
           && asciidoctor --trace -o /tmp/wis2-transition-guide/transition-guide/${FILE_BASENAME}.html index.adoc \
           && asciidoctor --trace --backend docbook --out-file - index.adoc | pandoc --from docbook --to docx --output /tmp/wis2-transition-guide/transition-guide/${FILE_BASENAME}.docx \
           && asciidoctor --trace -r asciidoctor-pdf --trace -b pdf -o /tmp/wis2-transition-guide/transition-guide/${FILE_BASENAME}.pdf index.adoc \
